[gd_scene load_steps=5 format=3 uid="uid://bxlxtdw5xtnku"]

[ext_resource type="Script" path="res://scripts/falling_platform.gd" id="1_3j51c"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3ayhf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iti3n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h1l3f"]
size = Vector2(20, 21)

[node name="FallingPlatform" type="Node2D"]
script = ExtResource("1_3j51c")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(20, 20)
texture = SubResource("PlaceholderTexture2D_3ayhf")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_iti3n")

[node name="TriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea" groups=["Player"]]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_h1l3f")

[node name="FallTimer" type="Timer" parent="."]

[node name="SelfDestructTimer" type="Timer" parent="."]

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
